--- a/css/main.css
+++ b/css/main.css
@@ -23,3 +23,10 @@
 .nav a:hover {
     text-decoration: underline; 
 }
+.top {
+    color: #ffffff;
+    margin-bottom: 20px;
+    padding-left: 138px;
+    padding-top: 159px;
+
+}
