Текст под шапкой

--- a/css/main.css
+++ b/css/main.css
@@ -30,3 +30,16 @@
     padding-top: 159px;
 
 }
+.top2{
+    font-size: 72px;
+    color: #ffffff;
+    margin-bottom: 20px;
+    padding-left: 138px;
+}
+
+.top3{
+    color: #ffffff;
+    margin-bottom: 20px;
+    padding-left: 138px;
+    
+}
