--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,23 @@
     padding-left: 138px;
     
 }
+.btn{
+    width: 190px;
+    height: 50px;
+    background-color: #25252C;
+    display: flex;
+    align-items: center;
+    border-radius: 50px;
+    margin-left: 138px;
+    border: none;
+
+}
+
+.arrow_btn{
+    padding-left: 15px;
+}
+
+.txt_btn{
+    color: #ffffff;
+    font-size: 14px;
+}
