--- a/css/main.css
+++ b/css/main.css
@@ -77,3 +77,11 @@
     padding: 20px;
     color: #ffffff;
 }
+.right {
+    flex: 1;
+    color: #ffffff;
+    margin-top: 231px;
+    margin-left: -525px;
+
+}
+
